# webssh

./: Cargo.toml  README.md  compile.sh  install.sh
.github/workflows/: release.yml
src/: api.rs  auth.rs  db.rs  main.rs  pty_session.rs  store.rs  vault.rs  ws_handler.rs
static/css/: app.css
static/js/: app.js
templates/: index.html
